--- a/cars.ipynb
+++ b/cars.ipynb
@@ -324,7 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# reset index\n",
     "index = auction_df2[auction_df2['year'] > 2017].index\n",
     "auction_df2.drop(index, inplace=True)"
    ]
@@ -424,6 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# rename column to 'id'\n",
     "auction_clean = auction_df2.rename(columns={'Unnamed: 0': 'id'})"
    ]
   },
@@ -973,6 +974,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# rename column value\n",
     "sales_clean = sales_df.rename(columns={'__year_resale_value': 'resale_value'})"
    ]
   },
@@ -982,6 +984,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reset index\n",
     "sales_clean.reset_index(drop=True, inplace=True)"
    ]
   },
@@ -991,6 +994,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# convert to lowercase\n",
     "sales_clean['Manufacturer'] = sales_clean['Manufacturer'].str.lower()\n",
     "sales_clean['Model'] = sales_clean['Model'].str.lower()"
    ]
@@ -1325,18 +1329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# drop last two columns \n",
-    "sales_clean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
+    "# drop unnecessary columns \n",
     "sales_clean = sales_clean.drop(['Latest_Launch', 'Power_perf_factor', 'Vehicle_type'], axis=1)"
    ]
   },
@@ -1972,6 +1965,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# convert to lowercase\n",
     "msrp_df['Make'] = msrp_df['Make'].str.lower()\n",
     "msrp_df['Model'] = msrp_df['Model'].str.lower()\n",
     "msrp_df['Transmission Type'] = msrp_df['Transmission Type'].str.lower()"
@@ -2166,6 +2160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export to .csv\n",
     "msrp_df.to_csv('msrp_clean.csv', index=True)"
    ]
   },
